Changed package name

--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>spark_tutorial</groupId>
-	<artifactId>spark_tutorial</artifactId>
+	<groupId>car_accidents_spark</groupId>
+	<artifactId>car_accidents_spark</artifactId>
 	<version>1</version>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
